--- a/matchup-web/src/index.html
+++ b/matchup-web/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MatchupWeb</title>
+  <title>Match UP</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
